-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.14.0
-
3
-
9223372036854775807
sanity test_272b fails for interop testing between a master, future 2.14.0, client and older (< 2.13.56 ) servers starting on 01 NOV 2020 for Lustre 2.13.56.63.
Looking at a recent failure at https://testing.whamcloud.com/test_sets/6e4f8226-6269-4979-a03f-af7e98a714be, we see from the suite_log that there is an issue with getting a lock for a DoM file
== sanity test 272b: DoM migration: DOM file to the OST-striped file (plain) ========================= 03:42:54 (1608781374) CMD: trevis-19vm4 lctl get_param -n osd*.*MDT0000.kbytesfree 1+0 records in 1+0 records out 2097152 bytes (2.1 MB, 2.0 MiB) copied, 0.0255055 s, 82.2 MB/s CMD: trevis-19vm4 lctl get_param -n osd*.*MDT0000.kbytesfree error: lfs migrate: /mnt/lustre/d272b.sanity/dom: data copy failed: No locks available sanity test_272b: @@@@@@ FAIL: failed to migrate to the new composite layout Trace dump: = /usr/lib64/lustre/tests/test-framework.sh:6273:error() = /usr/lib64/lustre/tests/sanity.sh:20792:test_272b()
Looking at patches that landed during this time related to DoM and locks, we see two related patches:
0a3c72f13045 LU-13645 ldlm: extra checks for DOM locks
067404403634 LU-13645 ldlm: group locks for DOM IBIT lock
Logs for more failures are at
https://testing.whamcloud.com/test_sets/87ee1f60-3a95-411f-af39-9ce5095c85bb
https://testing.whamcloud.com/test_sets/dab54121-a23a-4809-9a3c-93f05b40ecad
https://testing.whamcloud.com/test_sets/9bcc5049-96f5-40c9-9cc1-55ef00f350d7