lustre/ldlm/ldlm_inodebits.c
@@ -449,10 +449,9 @@ void ldlm_ibits_policy_wire_to_local(const union ldlm_wire_policy_data *wpolicy,
 				     union ldlm_policy_data *lpolicy)
 {
 	lpolicy->l_inodebits.bits = wpolicy->l_inodebits.bits;
-	lpolicy->l_inodebits.li_gid = wpolicy->l_inodebits.li_gid;
 	/**
-	 * try_bits are to be handled outside of generic write_to_local due
-	 * to different behavior on a server and client.
+	 * try_bits and li_gid are to be handled outside of generic
+	 * write_to_local due to different behavior on a server and client.
 	 */
 }
 
